<?xml version="1.0"?>
<package>
  <name>bsm_slam</name>
  <version>0.0.1</version>
  <description>BSM Slam Mapping</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="avoss19@bsmschool.org">Andrew Voss</maintainer>
  <maintainer email="awachowiak19@bsmschool.org">Aaron Wachowiak</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://github.com/avoss19/LIDAR</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="avoss19@bsmschool.org">Andrew Voss</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>hector_geotiff</run_depend>
  <run_depend>hector_trajectory_server</run_depend>
  <run_depend>hector_geotiff_plugins</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rviz</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
